# tms_dproject

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: auth.py  handlers.py  schemas.py
app/publications/: handlers.py  schemas.py
database/: database.py  models.py
docker_run/: celery.sh  celery_beat.sh  start.sh
migrations/: env.py
migrations/versions/: 00aabe24670f_0007_edit_lazy_.py  21493407531f_0009_add_joined_favmodel.py  2dfe31a7eab4_0013_in_user_add_tg_chat_id.py  3771351b1cdb_0006_edit_lazy_.py  387a3f19f8e5_0012_edit_relationships.py  3cd4f79d452b_0009_add_isactive_field.py  4686660bff65_0001_create_db.py  4f1e305c5e8f_0001_init_database.py  50e652483d18_0002_add_timezonetrue_in_user_table.py  609a46ee73ec_0007_increased_cell_sizes.py  6a1364962420_0006_edit_column_nullable.py  73bf640111d9_0011_add_default_value_user_role.py  9868c224d768_0008_add_images_table.py  9c4659420d24_0005_edit_lazy_carmodel.py  9e9af793965a_0002_edit_relationship_params.py  a8d4e1380315_0008_edit_model_in_fav.py  ba662982bd5e_0004_add_timezonetrue_in_models.py  bb17c36d3c7a_0005_edit_row_length.py  c255f1af0f31_database_create.py  c7b2b206523a_0010_rename_field_favorite.py  cf04981655f5_0015_edit_max_len_carmodel_generation.py  daac73209026_0004_edit_column_types.py  db53535e5aaf_0003_edit_column_names.py  dbb1a65a8986_0011_rename_fields_favorite_and_carmodel.py  e9d78b3b3e8c_0002_edit_time_columns_types.py  f9be0eb873bc_0001_init_database.py  (+1 more)
scrappers/: data_classes.py  run.py
worker/: worker.py
(+14 files in other folders)
